# Gazprom_neft_backend

./: Dockerfile  README.md  docker-compose.yml  gneft_nlp_developer.ipynb  main.py  pyproject.toml  requirements.txt
analysis/: analysis.py
database/: config.py  db.py
models/: stats.py
routes/: __init__.py  stats.py
schemas/: stats.py
